force-app/main/default/objects/MAS_GIC_Configuration__c/MAS_GIC_Configuration__c.object-meta.xml
<CustomObject>
    <description>A Mass Action Scheduler configuration: a SOQL source, a Flow or Apex target, field mappings, and an optional schedule.</description>
    <label>MAS Configuration</label>
    <pluralLabel>MAS Configurations</pluralLabel>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>