force-app/main/default/objects/MAS_GIC_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When checked, the configuration is eligible to run on its schedule.</description>
</CustomField>