force-app/main/default/objects/MAS_GIC_Configuration__c/fields/Schedule_Cron__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Cron__c</fullName>
    <label>Schedule Cron</label>
    <type>Text</type>
    <length>100</length>
    <description>Quartz cron expression used when Schedule Type is Scheduled (e.g. 0 0 6 * * ?).</description>
</CustomField>