force-app/main/default/objects/MAS_GIC_Configuration__c/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <filterScope>Everything</filterScope>
    <label>Inactive</label>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <columns>NAME</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Target_Type__c</columns>
    <columns>Target_Action_Name__c</columns>
    <columns>Last_Run_Status__c</columns>
    <columns>Last_Run_Completed_Date__c</columns>
</ListView>